k8s/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kindle-weather-service
spec:
  selector:
    app: kindle-weather
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
